--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock Paper Scissors</title>
-    <script src="script.js"></script>
+    <title>Rock Paper Scissors</title>   
 </head>
 <body>
-   
-    
+  <div style="margin-bottom: 20px;">
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissors">Scissors</button>
+  </div>
+  <div id="result"></div>
+  <script src='script.js'></script>
 </body>
 </html>
